[gd_scene load_steps=8 format=2]

[ext_resource path="res://SpriteSheets/Tilemaps/BreakBlock/BaseBlock.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Interactables/BreakBlock.gd" type="Script" id=2]
[ext_resource path="res://SpriteSheets/Tilemaps/BreakBlock/RightWall.png" type="Texture" id=3]
[ext_resource path="res://SpriteSheets/Tilemaps/BreakBlock/upwall.png" type="Texture" id=4]
[ext_resource path="res://SpriteSheets/Tilemaps/BreakBlock/Downwall.png" type="Texture" id=5]
[ext_resource path="res://SpriteSheets/Tilemaps/BreakBlock/LeftWall.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="BreakBlock" type="StaticBody2D" groups=["Crushable", "Destructable"]]
position = Vector2( 96, 32 )
collision_layer = 1027
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Base" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="UpWall" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="DownWall" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="RightWall" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="LeftWall" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2
